# docs/swagger.json
@@ -60,51 +60,7 @@
                 }
             }
         },
-        "/meeting/{id}": {
-            "delete": {
-                "description": "Cancel a meeting and update recipient's status",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "meeting"
-                ],
-                "summary": "Cancel an existing meeting",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Meeting ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/meeting/{id}/status": {
+        "/meeting/{uid}/status": {
             "put": {
                 "description": "Update the status of an existing meeting",
                 "consumes": [
@@ -141,6 +97,66 @@
                         "schema": {
                             "$ref": "#/definitions/services.Meeting"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/meeting/{uid}/{userID}": {
+            "delete": {
+                "description": "Cancel a meeting by its ID and the user cancelling",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meeting"
+                ],
+                "summary": "Cancel an existing meeting",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Meeting ID to cancel",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of the user cancelling the meeting",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -317,67 +333,6 @@
                 }
             }
         },
-        "/users": {
-            "get": {
-                "description": "Get all users with optional filters",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get all users",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email to filter users",
-                        "name": "email",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Role to filter users",
-                        "name": "role",
-                        "in": "query"
-                    },
-                    {
-                        "type": "number",
-                        "description": "Filter by latitude",
-                        "name": "filterByLat",
-                        "in": "query"
-                    },
-                    {
-                        "type": "number",
-                        "description": "Filter by longitude",
-                        "name": "filterByLon",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Is required assistance",
-                        "name": "isRequiredAssistance",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemas.SearchUsersResponseSchema"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/users/recipients": {
             "get": {
                 "description": "Get recipients who need assistance matching volunteer's languages and services",
@@ -523,19 +478,6 @@
                 }
             }
         },
-        "services.AssistanceStatus": {
-            "type": "string",
-            "enum": [
-                "DO_NOT_NEED_ASSISTANCE",
-                "NEED_ASSISTANCE",
-                "IN_PROGRESS"
-            ],
-            "x-enum-varnames": [
-                "DoNotNeedAssistance",
-                "NeedAssistance",
-                "InProgress"
-            ]
-        },
         "services.Gender": {
             "type": "string",
             "enum": [
@@ -571,7 +513,18 @@
                     "$ref": "#/definitions/services.MeetingStatus"
                 },
                 "recipient": {
-                    "$ref": "#/definitions/services.User"
+                    "description": "Not stored directly in MongoDB",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/services.User"
+                        }
+                    ]
+                },
+                "services": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "uid": {
                     "type": "string"
@@ -580,9 +533,31 @@
                     "type": "string"
                 },
                 "volunteer": {
-                    "$ref": "#/definitions/services.User"
+                    "description": "Not stored directly in MongoDB",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/services.User"
+                        }
+                    ]
                 }
             }
+        },
+        "services.MeetingAssistanceStatus": {
+            "type": "string",
+            "enum": [
+                "DO_NOT_NEED_ASSISTANCE",
+                "NEED_ASSISTANCE",
+                "IN_PROGRESS",
+                "PROVIDE",
+                "DO_NOT_PROVIDE"
+            ],
+            "x-enum-varnames": [
+                "DoNotNeedAssistance",
+                "NeedAssistance",
+                "InProgress",
+                "Provide",
+                "DoNotProvide"
+            ]
         },
         "services.MeetingStatus": {
             "type": "string",
@@ -607,6 +582,13 @@
                 "recipient": {
                     "$ref": "#/definitions/services.User"
                 },
+                "services": {
+                    "description": "list of services that will be provided on this meeting",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "volunteer": {
                     "$ref": "#/definitions/services.User"
                 }
@@ -620,9 +602,6 @@
                 },
                 "age": {
                     "type": "integer"
-                },
-                "assistanceStatus": {
-                    "$ref": "#/definitions/services.AssistanceStatus"
                 },
                 "email": {
                     "type": "string"
@@ -661,9 +640,10 @@
                     "$ref": "#/definitions/services.Role"
                 },
                 "services": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
+                    "description": "map[ServiceName]MeetingAssistanceStatus",
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/services.MeetingAssistanceStatus"
                     }
                 }
             }
@@ -687,9 +667,6 @@
                 },
                 "age": {
                     "type": "integer"
-                },
-                "assistanceStatus": {
-                    "$ref": "#/definitions/services.AssistanceStatus"
                 },
                 "createdAt": {
                     "type": "string"
@@ -731,9 +708,9 @@
                     "$ref": "#/definitions/services.Role"
                 },
                 "services": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/services.MeetingAssistanceStatus"
                     }
                 },
                 "uid": {
